--- a/index.html
+++ b/index.html
@@ -152,8 +152,26 @@
                 </div>
                 </aticle>
         </section>
+
         <section>
-            <div>hello karim</div>
+            <div class="learn-js">
+                <div class="js-icon">
+                    <i class="fab fa-js-square"></i>
+                </div>
+                <div class="js-info">
+                    <p>Javascript Algorithms and Data Structues </p>
+                </div>
+            </div>
+
+            <article class="covid-news">
+                <div class="covid-patient">
+                    <img src="images/covid-19.jpg" alt="">
+                </div class="covid-info">
+                <div>
+                    <p>Khulna division logs 47 Covid-19 deaths</p>
+            </article>
+            </div>
+            </article>
         </section>
         <!-- footer -->
         <footer class="football-info">
